Reward And Recognition System 2.0/force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <nameField>
        <displayFormat>EF-{0000}</displayFormat>
        <label>Received Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>