Reward And Recognition System 2.0/force-app/main/default/objects/Feedback__c/fields/RawRequest__c.field-meta.xml
<CustomField>
    <fullName>RawRequest__c</fullName>
    <description>This field contains the RawRequest that was received from caller.</description>
    <label>RawRequest</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>