Reward And Recognition System 2.0/force-app/main/default/objects/Feedback__c/fields/System_Configuration__c.field-meta.xml
<CustomField>
    <fullName>System_Configuration__c</fullName>
    <label>System Configuration</label>
    <referenceTo>System_Configuration__c</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>