Reward And Recognition System 2.0/force-app/main/default/objects/Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System_Configuration__c</columns>
    <columns>Date__c</columns>
    <columns>Employee__c</columns>
    <columns>Points__c</columns>
    <columns>Quarter__c</columns>
    <columns>Rating__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>